corpo do html construído. style inicial.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
 </head>
 <body>
     
+    <div class="container">
+        <h3 class="title">Cronômetro Web</h3>
+
+        <div class="stopwatch">
+            <span class="minutes">00</span>
+            <p>:</p>
+            <span class="seconds">00</span>
+            <p>:</p>
+            <span class="milliseconds">000</span>
+        </div>
+
+        <div class="buttons">
+            <button class="start-pause">Iniciar</button>
+            <button class="reset">Reiniciar</button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
