adicionando botões que faltaram.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </div>
 
         <div class="buttons">
-            <button class="start-pause">Iniciar</button>
+            <button class="start">Iniciar</button>
+            <button class="pause">Pausar</button>
+            <button class="continue">Continuar</button>
             <button class="reset">Reiniciar</button>
         </div>
     </div>
